--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,33 @@ code/sivale-security/sivale-security-services/.DS_Store
 code/sivale-security/sivale-security-services/src/main/java/.DS_Store
 
 code/sivale-security/sivale-security-services/src/main/java/com/sivale/.DS_Store
+code/sivale-security/.project
+code/sivale-security/.settings/org.eclipse.core.resources.prefs
+code/sivale-security/.settings/org.eclipse.m2e.core.prefs
+code/sivale-security/sivale-security-application/.classpath
+code/sivale-security/sivale-security-application/.factorypath
+code/sivale-security/sivale-security-application/.project
+code/sivale-security/sivale-security-application/.settings/org.eclipse.core.resources.prefs
+code/sivale-security/sivale-security-application/.settings/org.eclipse.jdt.apt.core.prefs
+code/sivale-security/sivale-security-application/.settings/org.eclipse.jdt.core.prefs
+code/sivale-security/sivale-security-application/.settings/org.eclipse.m2e.core.prefs
+code/sivale-security/sivale-security-commons/.classpath
+code/sivale-security/sivale-security-commons/.factorypath
+code/sivale-security/sivale-security-commons/.project
+code/sivale-security/sivale-security-commons/.settings/org.eclipse.core.resources.prefs
+code/sivale-security/sivale-security-commons/.settings/org.eclipse.jdt.apt.core.prefs
+code/sivale-security/sivale-security-commons/.settings/org.eclipse.jdt.core.prefs
+code/sivale-security/sivale-security-commons/.settings/org.eclipse.m2e.core.prefs
+code/sivale-security/sivale-security-persistence/.classpath
+code/sivale-security/sivale-security-persistence/.project
+code/sivale-security/sivale-security-persistence/.settings/org.eclipse.core.resources.prefs
+code/sivale-security/sivale-security-persistence/.settings/org.eclipse.jdt.apt.core.prefs
+code/sivale-security/sivale-security-persistence/.settings/org.eclipse.jdt.core.prefs
+code/sivale-security/sivale-security-persistence/.settings/org.eclipse.m2e.core.prefs
+code/sivale-security/sivale-security-services/.classpath
+code/sivale-security/sivale-security-services/.factorypath
+code/sivale-security/sivale-security-services/.project
+code/sivale-security/sivale-security-services/.settings/org.eclipse.core.resources.prefs
+code/sivale-security/sivale-security-services/.settings/org.eclipse.jdt.apt.core.prefs
+code/sivale-security/sivale-security-services/.settings/org.eclipse.jdt.core.prefs
+code/sivale-security/sivale-security-services/.settings/org.eclipse.m2e.core.prefs
